# Furniture_Soft

./: main.py  pyproject.toml  pyrightconfig.json  quick_quote.db
.agents/rules/: furniture.md
docs/: Product Vision AI Wood Manufacturing v0.2.docx  Technical Specifications V2 3 Product Suite.docx  plan.md  plan_p0.md  plan_p1.md  plan_p2.md  plan_p3.md  subscription_pricing_model.md
quick_quote_server/: main.py  quick_quote.db
quick_quote_server/app/config/: preset_templates.json  preset_templates.py
quick_quote_server/app/domain/: models.py  rule_engine.py
quick_quote_server/app/infrastructure/ai_services/: prompt_builder.py  vision_service.py
quick_quote_server/app/infrastructure/export/: __init__.py  export_service.py
quick_quote_server/app/infrastructure/repositories/: database.py  job_repository.py  models_orm.py  pricing_repository.py
quick_quote_server/app/infrastructure/storage/: file_storage.py
quick_quote_server/app/interfaces/api/: routes.py
quick_quote_server/app/use_cases/: manage_pricing.py  process_quotation.py  recalculate_quotation.py
quick_quote_server/static/: app.js  index.html  styles.css
quick_quote_server/tests/: conftest.py  test_api_routes.py  test_domain_models.py  test_manage_pricing.py  test_process_quotation_use_case.py  test_prompt_builder.py  test_recalculate_and_export.py  test_repositories.py  test_rule_engine.py  test_vision_service.py
