[project]
name = "mdf-soft"
version = "0.1.0"
description = "Furniture Soft - Quick Quote AI & Manufacturing Suite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.6",
]


